--- a/payall/views/project_payall_task_peso.xml
+++ b/payall/views/project_payall_task_peso.xml
@@ -11,7 +11,7 @@
         </record>
 
         <record model="ir.actions.act_window" id="project_payall_task_peso_action">
-            <field name="name">Prioridad</field>
+            <field name="name">Peso</field>
             <field name="res_model">payall.task.peso</field>
             <field name="view_mode">list</field>
             <field name="help" type="html"> <p class="o_view_nocontent_smiling_face"> Crear peso</p> </field>
