--- a/payall/views/project_payall_task_peso.xml
+++ b/payall/views/project_payall_task_peso.xml
@@ -5,7 +5,7 @@
             <field name="model">payall.task.peso</field>
             <field name="arch" type="xml">
                 <tree editable="top" create="1" delete="1" multi_edit="1" string="Prioridad de las actividades">
-                    <field name = "peso" required="1"/>
+                    <field name = "name" required="1"/>
                 </tree>
             </field>
         </record>
