--- a/payall/views/hr_timesheet_create_timesheet_wizard_form.xml
+++ b/payall/views/hr_timesheet_create_timesheet_wizard_form.xml
@@ -1,7 +1,7 @@
 <odoo>
   <data>
-    <record model="ir.ui.view" id="timesheet_project_create_task_form_inherit">
-        <field name="name">timesheet.project.create.task.form.inherit</field>
+    <record model="ir.ui.view" id="timesheet_project_create_task_wizard_form_inherit">
+        <field name="name">timesheet.project.create.task.wizard.form.inherit</field>
         <field name="model">project.task.create.timesheet</field>
         <field name="inherit_id" ref="hr_timesheet.project_task_create_timesheet_view_form"/>
         <field name="arch" type="xml">
