--- a/payall/views/hr_timesheet_project_task_inherit_copy.xml
+++ b/payall/views/hr_timesheet_project_task_inherit_copy.xml
@@ -13,7 +13,7 @@
                         <field name="user_id" invisible="1"/>
                         <field name="employee_id" required="1" widget="many2one_avatar_employee"/>
                         <field name="name" required="0"/>
-                        <field name="line_type"/>
+                        <field name="line_type" required="0"/>
                         <field name="unit_amount" widget="timesheet_uom" decoration-danger="unit_amount &gt; 24"/>
                         <field name="project_id" invisible="1"/>
                         <field name="task_id" invisible="1"/>
@@ -24,7 +24,7 @@
                         <field name="user_id"/>
                         <field name="employee_id" widget="many2one_avatar_employee"/>
                         <field name="name"/>
-                        <field name="line_type"/>
+                        <field name="line_type" required="0"/>
                         <field name="unit_amount" decoration-danger="unit_amount &gt; 24"/>
                         <field name="project_id"/>
                         <field name="task_id" invisible="1"/>
@@ -60,7 +60,7 @@
                                 <field name="user_id" invisible="1"/>
                                 <field name="employee_id" required="1" widget="many2one_avatar_employee"/>
                                 <field name="name" required="0"/>
-                                <field name="line_type"/>
+                                <field name="line_type" required="0"/>
                                 <field name="unit_amount" string="Duration" widget="float_time" decoration-danger="unit_amount &gt; 24"/>
                                 <field name="project_id" invisible="1"/>
                                 <field name="task_id" invisible="1"/>
