--- a/payall/views/project_payall_task_sprint.xml
+++ b/payall/views/project_payall_task_sprint.xml
@@ -1,16 +1,18 @@
 <odoo>
     <data>
         <record model="ir.ui.view" id="project_payall_task_sprint_form_inherit">
-        <field name="name">project.payall.task.sprint.form.inherit</field>
-        <field name="model">project.task</field>
-        <field name="inherit_id" ref="project.view_task_form2"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='parent_id']" position="after">
-                <field name = "sprint" />
-                <field name = "peso" required = "1" />
-                <field name = "priority_payall" string="Prioridad de HU" required = "1"/>
-            </xpath>
-        </field>
-    </record>
+            <field name="name">project.payall.task.sprint.form.inherit</field>
+            <field name="model">project.task</field>
+            <field name="inherit_id" ref="project.view_task_form2"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='parent_id']" position="after">
+                    <field name = "sprint" />
+                    <field name = "peso" required = "1" />
+                    <field name = "priority_payall" string="Prioridad de HU" required = "1"/>
+                    <field name = "peso_computed" required = "1" invisible='1' />
+                    <field name = "prioridad_computed" required = "1" invisible='1' />
+                </xpath>
+            </field>
+        </record>
     </data>
 </odoo>
